--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,9 +42,9 @@ jobs:
       
       - uses: chainguard-dev/actions/melange-build@main
         with:
-          config: hello.melange.yaml
+          config: azcopy.melange.yaml
           sign-with-temporary-key: true
-          archs: x86_64,aarch64
+          archs: x86_64
 
       - uses: chainguard-images/actions/apko-publish@e61cb0631c83e84cadc21337be090ad06bf05da2
         id: apko
