--- a/latest.apko.yaml
+++ b/latest.apko.yaml
@@ -3,11 +3,11 @@ contents:
     - https://packages.wolfi.dev/os/wolfi-signing.rsa.pub
   repositories:
     - https://packages.wolfi.dev/os
-    - '@local /github/workspace/packages'
+    - '@local ./packages'
   packages:
     - wolfi-baselayout
     - busybox
-    - hello@local
+    - azcopy-postgres@local
 
 accounts:
   groups:
@@ -19,9 +19,8 @@ accounts:
       gid: 65532
   run-as: 65532
 
-entrypoint:
-  command: /usr/local/bin/hello
+# entrypoint:
+#   command: /usr/local/bin/hello
 
 archs:
-- amd64
-- arm64
+- x86_64
