--- a/latest.apko.yaml
+++ b/latest.apko.yaml
@@ -3,11 +3,13 @@ contents:
     - https://packages.wolfi.dev/os/wolfi-signing.rsa.pub
   repositories:
     - https://packages.wolfi.dev/os
-    - '@local ./packages'
+    - packages
   packages:
     - wolfi-baselayout
     - busybox
-    - azcopy-postgres@local
+    - glibc
+    - bash
+    - azcopy-postgres
 
 accounts:
   groups:
