--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,8 +7,8 @@ on:
       - azcopy.melange.yaml
       - latest.apko.yaml
       - .github/workflows/release.yaml
-  schedule:
-    - cron: '15 3 * * *'  # every day at 03:15 (just wanted to avoid midnight)
+  # schedule:
+  #   - cron: '15 3 * * *'  # every day at 03:15 (just wanted to avoid midnight)
 
 
 concurrency: 
@@ -50,7 +50,7 @@ jobs:
           config: azcopy.melange.yaml
           sign-with-temporary-key: true
           # archs: x86_64,aarch64
-          archs: x86_64, arm64
+          archs: x86_64, aarch64
 
       - uses: chainguard-images/actions/apko-publish@e61cb0631c83e84cadc21337be090ad06bf05da2
         id: apko
