build only amd64 and used postgresql-15-dev which included pg_dump

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -50,7 +50,7 @@ jobs:
           config: azcopy.melange.yaml
           sign-with-temporary-key: true
           # archs: x86_64,aarch64
-          archs: x86_64, aarch64
+          archs: x86_64
 
       - uses: chainguard-images/actions/apko-publish@e61cb0631c83e84cadc21337be090ad06bf05da2
         id: apko
